--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,14 +13,15 @@ jobs:
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
-      - checkout
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
-          steps:
-      - store_artifacts:
-          path: test-results
-          destination: junit
+          name: Save test results
+          command: |
+            mkdir -p ~/test-results/junit/
+            find . -type f -regex ".*/build/test-results/.*xml" -exec cp {} ~/test-results/junit/ \;
+          when: always
+      - store_test_results:
+          path: ~/test-results
+
 
 
 # Invoke jobs via workflows
