--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,32 +1,34 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
-jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+executors:
+  default:
     docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+      - image: circleci/ruby:2.5
+commands:
+  install_gems:
+    description: "install dependencies"
+    steps:
+      - run: bundle check --path=vendor/bundle || bundle install --path=vendor/bundle --jobs=4 --retry=3
+  rspec:
+    description: "Run RSpec"
     steps:
       - run:
-          name: Save test results
-          command: |
-            mkdir -p ~/test-results/junit/
-            find . -type f -regex ".*/build/test-results/.*xml" -exec cp {} ~/test-results/junit/ \;
+          command: bundle exec rspec
           when: always
-      - store_test_results:
-          path: ~/test-results
-
-
-
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
+  cucumber:
+    description: "Run cucumber"
+    steps:
+      - run: 
+          command: bundle exec cucumber
+          when: always
+jobs:
+  test:
+    executor: default
+    steps:
+      - checkout
+      - install_gems
+      - rspec
+      - cucumber
 workflows:
-  say-hello-workflow:
+  pr:
     jobs:
-      - say-hello
+      - test
