--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,8 +24,14 @@ jobs: # a collection of steps
 
       - run: mvn package # run the actual tests
 
+      - run:
+          name: Save test results
+          command: |
+            mkdir -p ~/test-results/junit/
+            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
+          when: always
       - store_test_results:
-          path: test-results
+          path: ~/test-results
 
       - store_artifacts: # store the uberjar as an artifact
           # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
