--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs: # a collection of steps
   build-and-test: # runs not using Workflows must have a `build` job as entry point
 
     docker: # run the steps with Docker
-      - image: cimg/openjdk:11.0 # ...with this image as the primary container; this is where all `steps` will run
+      - image: openjdk:17-oracle # ...with this image as the primary container; this is where all `steps` will run
 
     steps:
       # Checkout the code as the first step.
