--- a/pom.xml
+++ b/pom.xml
@@ -136,15 +136,12 @@
             <version>5.1.1</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.44</version>
+            <groupId>com.vaadin</groupId>
+            <artifactId>exampledata</artifactId>
+            <version>4.1.1</version>
         </dependency>
     </dependencies>
-
-
 
     <build>
         <defaultGoal>spring-boot:run</defaultGoal>
