Created a random data function to create 50 random workers

--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,11 @@
             <version>5.1.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.vaadin</groupId>
+            <artifactId>exampledata</artifactId>
+            <version>4.1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
