--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
+spring.datasource.url = jdbc:h2:file:./data/database
+spring.datasource.driver-class-name = org.h2.Driver
+spring.datasource.username = sa 
+spring.datasource.password = password
+spring.jpa.hibernate.ddl-auto = update
+
+
+
+
 server.port=${PORT:8080}
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
@@ -8,3 +17,4 @@ vaadin.launch-browser=true
 # For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
 vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application
 spring.jpa.defer-datasource-initialization = true
+
